# kameo_es

./: Cargo.toml  flake.nix
core/: Cargo.toml
core/src/: lib.rs  stream_id.rs  test_utils.rs
examples/: bank_account.rs  manual_projection.rs  projection.rs
examples/axon_server_demo/: Cargo.toml  docker-compose.yml
examples/axon_server_demo/src/: main.rs
examples/axon_server_demo/synapse/: Dockerfile
examples/bank_account/: Cargo.toml
examples/bank_account/src/: lib.rs  main.rs
examples/projector/: Cargo.toml
examples/projector/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: command_service.rs  entity_actor.rs  error.rs  event_handler.rs  event_store.rs  lib.rs  stream_id.rs  test_utils.rs  transaction.rs
src/event_handler/: file.rs  in_memory.rs  mongodb.rs  mongodb_bulk.rs  mongodb_correlations.rs  polodb.rs  postgres.rs
