[package]
name = "kameo_es"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.1"
# cbor4ii = { version = "0.3.3", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
eventus = { git = "https://github.com/tqwewe/eventus" }
futures = "0.3.30"
kameo = "0.12.0"
mongodb = { version = "3.1.0", optional = true }
polodb_core = { path = "../../PoloDB/PoloDB/src/polodb_core", optional = true } # "5.1.2"
prost-types = "0.13.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "*"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1.10", features = ["serde", "v4"] }

[features]
default = ["mongodb"]
mongodb = [
  "dep:mongodb"
]
polodb = [
  "dep:polodb_core"
]
