[package]
name = "axon_server_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
dendrite = "0.14.1"
kameo = { path = "../../../kameo/crates/kameo" }
kameo_es = { path = "../.." }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
synapse-client = { path = "../../../../AxonIQ/axon-rust/synapse-client" }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-postgres = "0.7.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "*", features = ["v4"] }
