[package]
name = "bank_account"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
kameo = { path = "../../../kameo/crates/kameo" }
kameo_es = { path = "../.." }
message_db = { path = "../../../../thalo-rs/message_db" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
